# derelict_sites_register

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: data-quality.yml  technical-problem.yml
.github/workflows/: enrich-rzlt.yml  refresh-data.yml
css/: style.css  style.src.css
data/: active_cases_grid.geojson  derelict_sites_register.csv  derelict_sites_register.geojson  rzlt_run_manifest.json  rzlt_sites.csv  rzlt_sites.geojson  rzlt_sites_enriched.csv  rzlt_sites_enriched.geojson  rzlt_vacant_links.csv  vacant_sites_enrichment.csv  vacant_sites_planning_links.csv  vacant_sites_register.csv  vacant_sites_register.geojson  vacant_sites_removed.csv
docs/: redesign_plan.md  rzlt_enrichment.md
js/: analysis.js  charts.js  main.js  map.js  rzlt.js  spatial.js  table.js  tokens.js  vacant.js
scripts/: enrich_rzlt.py  extract_vacant_sites_pdf.py  fetch_data.py  fetch_rzlt.py  fetch_vacant_sites.py  link_rzlt_vacant_sites.py  social_preview.cjs  update_changelog.py
tests/: test_enrich_rzlt.py
