[project]
name = "derelict-sites-register"
version = "0.1.0"
description = "Data pipeline for the Dublin derelict, vacant, and RZLT registers"
requires-python = ">=3.11"
# The twice-daily fetch scripts (fetch_data.py, fetch_vacant_sites.py,
# fetch_rzlt.py, update_changelog.py) use only the standard library so they
# run in CI without installation. These dependencies are for the heavier,
# separately scheduled enrichment and linking scripts.
dependencies = [
    "shapely>=2.0",
    "pyproj>=3.6",
    "requests>=2.31",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pdfplumber>=0.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
